--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,21 +10,24 @@
   },
   "dependencies": {
     "@ant-design/colors": "^7.0.0",
-    "@rainbow-me/rainbowkit": "^0.11.1",
+    "@rainbow-me/rainbowkit": "^2.2.8",
+    "@tanstack/react-query": "^5.90.2",
+    "@wagmi/connectors": "^5.11.0",
     "antd": "^5.3.0",
-    "ethers": "^5.7.2",
-    "next": "^12.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "styled-components": "^5.3.8",
-    "viem": "^0.1.0",
-    "wagmi": "^0.11.7"
+    "viem": "^2.37.8",
+    "wagmi": "^2.17.3"
   },
   "devDependencies": {
     "@types/node": "^17.0.45",
     "@types/react": "^18.0.28",
-    "eslint": "^8.35.0",
-    "eslint-config-next": "^12.3.4",
-    "typescript": "^4.9.5"
+    "@vanilla-extract/css": "^1.14.2",
+    "@vanilla-extract/sprinkles": "^1.6.5",
+    "eslint": "^9.36.0",
+    "eslint-config-next": "^15.5.4",
+    "next": "^15.5.4",
+    "typescript": "^5.9.2"
   }
 }
